--- a/app/editStrategy/editStrategy.html
+++ b/app/editStrategy/editStrategy.html
@@ -96,11 +96,11 @@
             </div>
             <div class="form-group start-date">
                 <label class="cms-form-label">Start Date</label>
-                <input type="date" ng-disabled="ctrl.disableField"/>
+                <input type="date" ng-model="ctrl.strategyDetails.startDate" ng-disabled="ctrl.disableField"/>
             </div>
             <div class="form-group start-end">
                 <label class="cms-form-label">End Date</label>
-                <input type="date" ng-disabled="ctrl.disableField"/>
+                <input type="date" ng-model="ctrl.strategyDetails.endDate" ng-disabled="ctrl.disableField"/>
             </div>
         </div>
         
